<resources>
    <string name="app_name">PrematureBabyMonitoringApp</string>
    <string name="babyPic">Baby Picture</string>
    <string name="Name">Name</string>
    <string name="typeName">Type Name</string>
    <string name="patientList">Patient List</string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="timeOfBirth">Time Of Birth</string>
    <string name="type">Enter Text</string>
    <string name="basicInfo">Basic Information</string>
    <string name="healthInfo">Health</string>
    <string name="others">Others</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_title">Spinner</string>
    <string name="HospitalID">Hospital ID</string>
    <string name="commentSpace">commentSpace</string>
    <string-array name="patients_array">
            <item>Patient1</item>
            <item>Patient2</item>
    </string-array>
</resources>