<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#E0F2F4">
    <ImageView
            android:layout_width="181dp"
            android:layout_height="192dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            android:contentDescription="@string/babyPic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.201"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/gender"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/type"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editTextDate"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/type"
            android:text="@string/dateOfBirth" app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editTextTime" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editTextTime"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/type"
            android:text="@string/timeOfBirth" app:layout_constraintTop_toBottomOf="@+id/editTextDate"
            app:layout_constraintBottom_toTopOf="@+id/editTextPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextPhone"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/type"
            android:text="@string/emergencyContact" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Name"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:hint="@string/type"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="409dp"
            android:layout_height="wrap_content" android:id="@+id/spinner3"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/patientList"
            android:layout_width="99dp"
            android:layout_height="17dp" android:id="@+id/textView"
            android:background="#74E7F3F4" app:layout_constraintEnd_toEndOf="@+id/spinner3"
            app:layout_constraintStart_toStartOf="@+id/spinner3"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintBottom_toBottomOf="@+id/spinner3" app:layout_constraintTop_toTopOf="@+id/spinner3"/>
</androidx.constraintlayout.widget.ConstraintLayout>